Bug fiexes and final test